--- a/css/main.css
+++ b/css/main.css
@@ -248,14 +248,14 @@ nav a:hover {
     }
 }
 
-@media only screen and (min-width: 1140px) {
+@media only screen and (min-width: 1240px) {
 
 /* ===============
     Maximal Width
    =============== */
 
     .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
+        width: 1116px;
         margin: 0 auto;
     }
 }
