Better-handle images that cannot be loaded

--- a/css/openfda.css
+++ b/css/openfda.css
@@ -126,6 +126,7 @@ div.details_body .img_gallery > div{
 
 div.details_body .img_gallery > div img{
   height: 100px;
+  vertical-align: top;
 }
 
 /* ============================
